--- a/styles.css
+++ b/styles.css
@@ -108,3 +108,41 @@
         font-size: 12px; /* Adjust font size for smaller screens */
     }
 }
+/*img slider + navbar*/
+
+.container1 {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    gap: 10px;
+    width: 100%;
+}
+
+.box1 {
+    padding: 30px;
+    text-align: center;
+    border-radius: 5px;
+}
+
+.box1 h1 {
+    color: white;
+}
+
+.box1 p {
+    color:white;
+}
+
+.red {
+    background-color: red;   color:white;
+}
+
+.orange {
+    background-color: orange;   color:white;
+}
+
+.green {
+    background-color: green;
+    color:white;
+}
+
+
+/* 3 things in a row after the slider*/
