--- a/style.css
+++ b/style.css
@@ -379,7 +379,7 @@ header{
       background: url("1\ \(1\).png");
   }
   .iphone-11{
-      background: url("Modern\ app\ user\ interface\ laptop\ mock\ instagram\ post\ \(portrait\)\ \(1450\ x\ 1080\ px\)\ \(1\).png");
+      background: url("Untitled\ design\ \(6\).png");
   }
   .watch{
       background: url("Pink\ and\ Purple\ Illustrative\ Gaming\ Streaming\ Banner\ \(4\).png");
